[gd_scene load_steps=7 format=3 uid="uid://dbee150odax4f"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_e3oyd"]
[ext_resource type="Texture2D" uid="uid://2y65d26isvio" path="res://assets/bg.png" id="1_ymhha"]
[ext_resource type="PackedScene" uid="uid://bdquok6x16752" path="res://scenes/pipe.tscn" id="2_b4v3i"]
[ext_resource type="PackedScene" uid="uid://bn3t3m7aaq5fa" path="res://scenes/bird.tscn" id="3_3gr0d"]
[ext_resource type="PackedScene" uid="uid://bxcnhcpn0sbik" path="res://scenes/ground.tscn" id="4_wy10w"]
[ext_resource type="PackedScene" uid="uid://bfmxheflt7sf5" path="res://scenes/game_over.tscn" id="6_35iiy"]

[node name="Main" type="Node"]
script = ExtResource("1_e3oyd")
pipe_scene = ExtResource("2_b4v3i")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ymhha")
offset = Vector2(432, 384)

[node name="Bird" parent="." instance=ExtResource("3_3gr0d")]

[node name="Ground" parent="." instance=ExtResource("4_wy10w")]

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -34.5
offset_right = 34.5
offset_bottom = 23.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "SCORE: 0"

[node name="GameOver" parent="." instance=ExtResource("6_35iiy")]

[connection signal="hit" from="Ground" to="." method="_on_ground_hit"]
[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
[connection signal="restart" from="GameOver" to="." method="_on_game_over_restart"]
